--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawingView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent">
+
+</ru.qotofey.android.characterrecognition.view.component.DrawingView>
 
 <!--<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"-->
